init: first commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #f9f9f9;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.grid {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 5.0em 0em 3.0em 0;
 }
 
-.App-link {
-  color: #61dafb;
+.grid .pokeCard {
+  margin: 0em 1.0em 2.0em 1.0em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (min-width: 650px) {
+  .grid {
+    flex-direction: column;
   }
 }
