--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,30 @@
 body {
   background: #f9f9f9;
 }
+
+.drawers {
+  display:grid;
+  gap: 1em;
+  grid-template-columns:1 1fr;
+  text-align:center;
+  align-content: center;
+}
+
+
+@media (min-width:425px) {
+  .drawers {
+    grid-template-columns:repeat(2, 1fr);
+  }
+}
+@media (min-width:1024px) {
+  .drawers {
+    grid-template-columns:repeat(3, 1fr);
+  }
+}
+@media (min-width:1440px) {
+  .drawers {
+    grid-template-columns:repeat(5, 1fr);
+  }
+}
+
+
